# herbrand-prolog

./: README.md  herbrand-prolog.cabal
execs/: Main.hs
src/Data/: InfiniteSet.hs
src/Herbrand/: HornClause.hs  Model.hs
src/Prolog/: Parser.hs
usage/: family.hs  family.prolog  travel.prolog
