name:                herbrand-prolog
version:             0.1.0.0
synopsis:            A pseudo-Prolog that tries to answer queries by building the least Herbrand model.
-- description:
homepage:            http://github.com/joom/herbrand-prolog
license:             MIT
license-file:        LICENSE
author:              Joomy Korkut
maintainer:          cumhurkorkut@gmail.com
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.InfiniteSet
                     , Herbrand.HornClause
                     , Herbrand.Model
  build-depends:       base >= 4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable herbrand-prolog
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      execs
  default-language:    Haskell2010
